Toggle overlap issue fixed

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -172,6 +172,7 @@
   background-color: var(--back-ground-color);
   height: 100vh;
   width: 100%;
+  z-index: 99;
 }
 
 .searchView.open .searchWrapper {
